force-app/main/default/objects/ADM_Acceptance_Criterion__c/ADM_Acceptance_Criterion__c.object-meta.xml
<CustomObject>
    <label>Acceptance Criterion</label>
    <nameField>
        <label>Acceptance Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acceptance Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>