force-app/main/default/objects/ADM_Acceptance_Criterion__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description (2000)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>