force-app/main/default/objects/ADM_Acceptance_Criterion__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <label>Work</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipLabel>Acceptance Criteria</relationshipLabel>
    <relationshipName>Acceptance_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>