force-app/main/default/objects/ADM_Acceptance_Criterion__c/validationRules/Description_is_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_not_null</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Description__c )</errorConditionFormula>
    <errorMessage>Description cannot be blank!</errorMessage>
</ValidationRule>