force-app/main/default/objects/ADM_Acceptance_Criterion__c/validationRules/Name_is_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_is_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorMessage>Name cannot be blank!</errorMessage>
</ValidationRule>